# gbEmulator

./: .gitignore  README.md  gbEmulator.sln
gbEmulator/: CMakeLists.txt  gbEmulator.vcxproj  gbEmulator.vcxproj.filters  imgui.ini
gbEmulator/res/shaders/: pixel.frag  pixel.vert
gbEmulator/src/: JsonTest.cpp  JsonTest.h  app.cpp  app.h  cpu.cpp  cpu.h  gb.cpp  gb.h  main.cpp  mmu.cpp  mmu.h  ppu.cpp  ppu.h  regs.h  renderingManager.cpp  renderingManager.h
